Update UI: Add logo, update colors, form styling improvements, and remove email from footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         --navy: #0A0E1A;
         --orange: #FF9A00;
         --light-gray: #F2F2F2;
-        --sage: #71866B;
+        --sage: #3B86F2;
       }
       body {
         font-family: 'Plus Jakarta Sans', sans-serif;
